link tag correction to logo on header
Co-authored-by: Juliana Ifionu <julieifionu@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <header>
             <nav class="nav_container">
-                <div class="logo">
+                <a href="#" class="logo">
                      <img src="images/MyLogo.png" alt="Logo">
-                </div>
+                </a>
      
                 <div class="toggle">
                     <img src="images/Union.png" alt="Logo">
