changed toggle tag from div to nav tags
Co-authored-by: Juliana Ifionu <julieifionu@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                      <img src="images/MyLogo.png" alt="Logo">
                 </a>
      
-                <div class="toggle">
-                    <img src="images/Union.png" alt="Logo">
-                </div>
+                <nav class="toggle">
+                    <img src="images/Union.png" alt="hamburger menu">
+                </nav>
              </nav>
         </header>
 
