--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <main>
             <div class="main_container">
-               <div class="box1">
+               <h1 class="box1">
                    I'm Alex Glad to see you!
-               </div>
+               </h1>
                <div class="box2">
                 I'm a software developer! I can help you build a product, 
                 feature or website Look through some of my work and experience! 
