--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                <h1 class="box1">
                    I'm Alex Glad to see you!
                </h1>
-               <div class="box2">
+               <p class="box2">
                 I'm a software developer! I can help you build a product, 
                 feature or website Look through some of my work and experience! 
                 If you like what you see and have a project you need coded, don't hestiate to contact me.
-               </div>
+               </p>
                <div class="box3">
                    LET'S CONNECT
                </div>
