corrected social contacts semantics from HTML div's to HTML lists
Co-authored-by: Juliana Ifionu <julieifionu@gmail.com>

--- a/index.html
+++ b/index.html
@@ -34,23 +34,33 @@
                <div class="box3">
                    LET'S CONNECT
                </div>
-               <div class="box4">
-                    <div class="socials">
-                        <img src="images/twitter.png" alt="twitter">
-                    </div>
-                    <div class="socials">
+               <ul class="box4">
+                    <li class="socials">
+                       <a href="#">
+                         <img src="images/twitter.png" alt="twitter">
+                        </a>
+                    </li>
+                    <li class="socials">
+                      <a href="#">
                         <img src="images/Linkedin.png" alt="Linkedin">
-                    </div>
-                    <div class="socials">
+                      </a>
+                    </li>
+                    <li class="socials">
+                      <a href="#">
                         <img src="images/m.png" alt="M">
-                    </div>
-                    <div class="socials">
+                      </a>
+                    </li>
+                    <li class="socials">
+                      <a href="#">
                         <img src="images/github.png" alt="github">
-                    </div>
-                    <div class="socials">
+                      </a>
+                    </li>
+                    <li class="socials">
+                      <a href="#">
                         <img src="images/peace.png" alt="peace">
-                    </div>
-               </div>
+                      </a>
+                    </li>
+               </ul>
            </div>
         </main>
 
