Fixed tags used incorrectly in html, fixed css codes to use original figma design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <nav class="nav_container">
+            <div class="nav_container">
                 <a href="#" class="logo">
                      <img src="images/MyLogo.png" alt="Logo">
                 </a>
@@ -18,7 +18,7 @@
                 <nav class="toggle">
                     <img src="images/Union.png" alt="hamburger menu">
                 </nav>
-             </nav>
+              </div>
         </header>
 
         <main>
@@ -45,7 +45,7 @@
                         <img src="images/Linkedin.png" alt="Linkedin">
                       </a>
                     </li>
-                    <li class="socials">
+                    <li class="socials child">
                       <a href="#">
                         <img src="images/m.png" alt="M">
                       </a>
