changed tools in project from <p> tags to lists + added groups to framework and skills

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 feature or website Look through some of my work and experience! 
                 If you like what you see and have a project you need coded, don't hestiate to contact me.
                </p>
-               <div class="box3">
+               <h2 class="box3">
                    LET'S CONNECT
-               </div>
+               </h2>
                <ul class="box4">
                     <li class="socials">
                        <a href="https://twitter.com/harlekhal">
@@ -88,9 +88,11 @@
                           A daily selection of privately personalized reads; no accounts or sign-ups required.
                         </p>
                         <div class="project_tags_container">
-                            <p class="project_tag">html</p>
-                            <p class="project_tag">css</p>
-                            <p class="project_tag">javaScript</p>
+                          <ul class="tags_flex">
+                            <li class="project_tag">html</li>
+                            <li class="project_tag">css</li>
+                            <li class="project_tag">javaScript</li>
+                          </ul>
                         </div>
                         <button type="button" class="view_project_btn">
                             See Project
@@ -120,9 +122,11 @@
                        A daily selection of privately personalized reads; no accounts or sign-ups required.
                      </p>
                      <div class="project_tags_container">
-                         <p class="project_tag">html</p>
-                         <p class="project_tag">css</p>
-                         <p class="project_tag">javaScript</p>
+                       <ul class="tags_flex">
+                         <li class="project_tag">html</li>
+                         <li class="project_tag">css</li>
+                         <li class="project_tag">javaScript</li>
+                       </ul>
                      </div>
                      <button type="button" class="view_project_btn">
                          See Project
@@ -152,9 +156,11 @@
                      A daily selection of privately personalized reads; no accounts or sign-ups required.
                    </p>
                    <div class="project_tags_container">
-                       <p class="project_tag">html</p>
-                       <p class="project_tag">css</p>
-                       <p class="project_tag">javaScript</p>
+                      <ul class="tags_flex">
+                        <li class="project_tag">html</li>
+                        <li class="project_tag">css</li>
+                        <li class="project_tag">javaScript</li>
+                      </ul>
                    </div>
                    <button type="button" class="view_project_btn">
                        See Project
@@ -184,9 +190,11 @@
                      A daily selection of privately personalized reads; no accounts or sign-ups required.
                    </p>
                    <div class="project_tags_container">
-                       <p class="project_tag">html</p>
-                       <p class="project_tag">css</p>
-                       <p class="project_tag">javaScript</p>
+                    <ul class="tags_flex">
+                      <li class="project_tag">html</li>
+                      <li class="project_tag">css</li>
+                      <li class="project_tag">javaScript</li>
+                    </ul>
                    </div>
                    <button type="button" class="view_project_btn">
                        See Project
@@ -275,6 +283,26 @@
                       </h3>
                       <img src="images/arrow.png" alt="arrow-icon"/>
                     </div>
+                    <ul class="skills_dropdown_desc closed">
+                      <li class="skills_desc_li">
+                        <img src="images/react.png" alt="React"/>
+                        <p class="skills_desc_li_title">
+                          React
+                        </p>
+                      </li>
+                      <li class="skills_desc_li">
+                        <img src="images/ruby.png" alt="Ruby on Rails"/>
+                        <p class="skills_desc_li_title">
+                          Ruby on Rails
+                        </p>
+                      </li>
+                      <li class="skills_desc_li">
+                        <img src="images/tailwind.png" alt="Tailwind"/>
+                        <p class="skills_desc_li_title">
+                          Tailwind
+                        </p>
+                      </li>
+                    </ul>
                   </li>
                   <li class="languages">
                     <div class="skills_dropdown">
@@ -283,6 +311,14 @@
                       </h3>
                       <img src="images/arrow.png" alt="arrow-icon"/>
                     </div>
+                    <ul class="skills_dropdown_desc closed">
+                      <li class="skills_desc_li">
+                        <img src="images/rubiks.png" alt="Problem Solving"/>
+                        <p class="skills_desc_li_title">
+                          Problem Solving
+                        </p>
+                      </li>
+                    </ul>
                   </li>
                </ul>
            </section>
