--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                 feature or website Look through some of my work and experience! 
                 If you like what you see and have a project you need coded, don't hestiate to contact me.
               </p>
-              <div class="box3">
+              <h2 class="box3">
                   LET'S CONNECT
-              </div>
+              </h2>
               <ul class="box4">
                    <li class="socials">
                       <a href="https://twitter/harlexkhal">
