--- a/index.html
+++ b/index.html
@@ -322,6 +322,36 @@
                   </li>
                </ul>
            </section>
+
+           <section class="contact" id="contact">
+            <div class="contact__container">
+              <h2 class="contact_header">Contact me</h2>
+              <p class="contact_description">
+                If you have an application you are interested in developing, a
+                feature that you need built or a project that needs coding. I’d love
+                to help with it
+              </p>
+              <form action="#" method="post">
+                <ul>
+                  <li>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="firstname" placeholder="Enter your name here">
+                  </li>
+                  <li>
+                    <label for="email">Email:</label>
+                    <input type="text" id="email" name="firstname" placeholder="Enter your email here">
+                  </li>
+                  <li>
+                    <label for="email">Message:</label>
+                    <textarea  placeholder="Write your message here" required></textarea>
+                  </li>
+                  <li>
+                    <input type="submit" class="submit_btn" value="Get In Touch" />
+                  </li>
+                </ul>
+              </form>
+            </div>
+          </section>
         </main>
     </body>
 </html>
