Added HTML5 form validation in name and email inputs + added max characters limit in name and message input

--- a/index.html
+++ b/index.html
@@ -335,15 +335,15 @@
                 <ul>
                   <li>
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="firstname" placeholder="Enter your name here">
+                    <input type="text" id="name" name="firstname" placeholder="Enter your name here" maxlength="30" required>
                   </li>
                   <li>
                     <label for="email">Email:</label>
-                    <input type="text" id="email" name="firstname" placeholder="Enter your email here">
+                    <input type="text" id="email" name="firstname" placeholder="Enter your email here" required>
                   </li>
                   <li>
                     <label for="email">Message:</label>
-                    <textarea  placeholder="Write your message here" required></textarea>
+                    <textarea  placeholder="Write your message here" maxlength="500" required></textarea>
                   </li>
                   <li>
                     <input type="submit" class="submit_btn" value="Get In Touch" />
