Added formspree link + corrected naming labels and input type names in contact form

--- a/index.html
+++ b/index.html
@@ -331,19 +331,19 @@
                 feature that you need built or a project that needs coding. I’d love
                 to help with it
               </p>
-              <form action="#" method="post">
+              <form action="https://formspree.io/f/mzbyjjjd" method="post">
                 <ul>
                   <li>
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="firstname" placeholder="Enter your name here" maxlength="30" required>
+                    <input type="text" id="name" name="name" placeholder="Enter your name here" maxlength="30" required>
                   </li>
                   <li>
                     <label for="email">Email:</label>
-                    <input type="text" id="email" name="firstname" placeholder="Enter your email here" required>
+                    <input type="email" id="email" name="email" placeholder="Enter your email here" required>
                   </li>
                   <li>
-                    <label for="email">Message:</label>
-                    <textarea  placeholder="Write your message here" maxlength="500" required></textarea>
+                    <label for="message">Message:</label>
+                    <textarea id="message" placeholder="Write your message here" maxlength="500" required></textarea>
                   </li>
                   <li>
                     <input type="submit" class="submit_btn" value="Get In Touch" />
