--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
             <div class="nav_container">
                 <a href="#" class="logo">
                      <img src="images/MyLogo.png" alt="Logo">
-                </a>
-     
+                </a>    
                 <nav class="toggle">
                     <img src="images/Union.png" alt="hamburger menu">
+                </nav>
+                <nav class = "desktop_nav">
+                    <ul class="desktop_nav_container">
+                      <li class="desk_nav_li">
+                        <a href="#Portfolio" class="desk_nav_info">Portfolio</a>
+                      </li>
+                      <li class="desk_nav_li">
+                        <a href="#About" class="desk_nav_info">About</a>
+                      </li>
+                      <li class="desk_nav_li">
+                        <a href="#Contact" class="desk_nav_info">Contact</a>
+                      </li>
+                    </ul>
                 </nav>
               </div>
         </header>
@@ -24,7 +36,7 @@
         <main>
             <section class="main_container">
                <h1 class="box1">
-                   I'm Alex Glad to see you!
+                   I'm Alexander Glad to see you!
                </h1>
                <p class="box2">
                 I'm a software developer! I can help you build a product, 
@@ -63,7 +75,7 @@
                </ul>
             </section>
             
-            <section>
+            <section id="Portfolio">
               <ul class="project_contents">
                  <li class="project">
                      <img src="images/project1.png" alt="Project Image 1">
@@ -99,7 +111,7 @@
                         </button>
                      </div>
                  </li>
-                 <li class="project">
+                 <li class="project reverse_row">
                   <img src="images/project2.png" alt="Project Image 2">
                   <div class="project_description">
                      <h2 class="project_title">
@@ -167,7 +179,7 @@
                    </button>
                 </div>
               </li>
-              <li class="project">
+              <li class="project reverse_row">
                 <img src="images/project4.png" alt="Project Image 4">
                 <div class="project_description">
                    <h2 class="project_title">
@@ -204,50 +216,53 @@
              </ul>
             </section>
 
-            <section class="about_container">
-              <h1 class="box1">
+            <section class="about_container" id="About">
+              <div class="about_myself">
+                <h1 class="box1">
                   About Myself
-              </h1>
-              <p class="box2">
-                Hello I'm a software developer! I can help you build a product, 
-                feature or website Look through some of my work and experience! 
-                If you like what you see and have a project you need coded, don't hestiate to contact me.
-              </p>
-              <h2 class="box3">
-                  LET'S CONNECT
-              </h2>
-              <ul class="box4">
-                   <li class="socials">
-                      <a href="https://twitter/harlexkhal">
-                        <img src="images/twitter.png" alt="twitter">
-                       </a>
-                   </li>
-                   <li class="socials">
-                     <a href="https://www.linkedin.com/in/alexander-oguzie-ibeh-776814164">
-                       <img src="images/Linkedin.png" alt="Linkedin">
-                     </a>
-                   </li>
-                   <li class="socials child">
-                     <a href="#">
-                       <img src="images/m.png" alt="M">
-                     </a>
-                   </li>
-                   <li class="socials">
-                     <a href="https://github.com/harlekhal">
-                       <img src="images/github.png" alt="github">
-                     </a>
-                   </li>
-                   <li class="socials">
-                     <a href="#">
-                       <img src="images/peace.png" alt="peace">
-                     </a>
-                   </li>
-              </ul>
-               <button type="button" class="resume_btn">
-                  Get my resume
-               </button>
+               </h1>
+                <p class="box2">
+                  Hello I'm a software developer! I can help you build a product, 
+                  feature or website Look through some of my work and experience! 
+                  If you like what you see and have a project you need coded, don't hestiate to contact me.
+                </p>
+                <h2 class="box3">
+                    LET'S CONNECT
+                </h2>
+                <ul class="box4">
+                    <li class="socials">
+                        <a href="https://twitter/harlexkhal">
+                          <img src="images/twitter.png" alt="twitter">
+                        </a>
+                    </li>
+                    <li class="socials">
+                      <a href="https://www.linkedin.com/in/alexander-oguzie-ibeh-776814164">
+                        <img src="images/Linkedin.png" alt="Linkedin">
+                      </a>
+                    </li>
+                    <li class="socials">
+                      <a href="#">
+                        <img src="images/m.png" alt="M">
+                      </a>
+                    </li>
+                    <li class="socials">
+                      <a href="https://github.com/harlekhal">
+                        <img src="images/github.png" alt="github">
+                      </a>
+                    </li>
+                    <li class="socials">
+                      <a href="#">
+                        <img src="images/peace.png" alt="peace">
+                      </a>
+                    </li>
+                </ul>
+                <button type="button" class="resume_btn">
+                    Get my resume
+                </button>
+             </div>
 
-               <ul class="skills">
+             <div class="about_myskills">
+                <ul class="skills">
                   <li class="languages">
                     <div class="skills_dropdown">
                       <h3 class="skills_dropdown_title">
@@ -320,10 +335,11 @@
                       </li>
                     </ul>
                   </li>
-               </ul>
+              </ul>
+             </div>
            </section>
 
-           <section class="contact" id="contact">
+           <section class="contact" id="Contact">
             <div class="contact__container">
               <h2 class="contact_header">Contact me</h2>
               <p class="contact_description">
@@ -345,7 +361,7 @@
                     <label for="message">Message:</label>
                     <textarea id="message" placeholder="Write your message here" maxlength="500" required></textarea>
                   </li>
-                  <li>
+                  <li class="form_li_submit">
                     <input type="submit" class="submit_btn" value="Get In Touch" />
                   </li>
                 </ul>
