Fixed javascript broken image that only occurs in github pages when site is launched

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     </div>
                     <ul class="skills_dropdown_desc">
                       <li class="skills_desc_li">
-                        <img src="images/Javascript.png" alt="javaScript"/>
+                        <img src="images/javascript.png" alt="javaScript"/>
                         <p class="skills_desc_li_title">
                           JavaScript
                         </p>
