Fixed broken twitter social link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                </h2>
                <ul class="box4">
                     <li class="socials">
-                       <a href="https://twitter.com/harlekhal">
+                       <a href="https://twitter.com/harlexkhal">
                          <img src="images/twitter.png" alt="twitter">
                         </a>
                     </li>
