Updated google analytics API-ID

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Portfolio</title>
+    <title>Microverse | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,13 +13,13 @@
       rel="stylesheet"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1LDCR0VGBJ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRXL389CXL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-1LDCR0VGBJ');
+      gtag('config', 'G-XRXL389CXL');
     </script>
   </head>
 
