Add project/work section dynamicity from javascript objects

--- a/index.html
+++ b/index.html
@@ -96,114 +96,7 @@
 
       <section id="Portfolio">
         <ul class="project_contents">
-          <li class="project">
-            <img src="images/project1.png" alt="Project Image 1" />
-            <div class="project_description">
-              <h2 class="project_title">Tonic</h2>
-              <div class="project_info">
-                <p class="project_title_II">CANOPY</p>
-                <ul class="project_job_title_info_container">
-                  <li class="job_title_info">Back End Dev</li>
-                  <li class="job_title_info">2015</li>
-                </ul>
-              </div>
-              <p class="project_full_desc">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <div class="project_tags_container">
-                <ul class="tags_flex">
-                  <li class="project_tag">html</li>
-                  <li class="project_tag">css</li>
-                  <li class="project_tag">javaScript</li>
-                </ul>
-              </div>
-              <button type="button" class="view_project_btn proj_1">
-                See Project
-              </button>
-            </div>
-          </li>
-          <li class="project reverse_row">
-            <img src="images/project2.png" alt="Project Image 2" />
-            <div class="project_description">
-              <h2 class="project_title">Multi-Post Stories</h2>
-              <div class="project_info">
-                <p class="project_title_II">CANOPY</p>
-                <ul class="project_job_title_info_container">
-                  <li class="job_title_info">Back End Dev</li>
-                  <li class="job_title_info">2015</li>
-                </ul>
-              </div>
-              <p class="project_full_desc">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <div class="project_tags_container">
-                <ul class="tags_flex">
-                  <li class="project_tag">html</li>
-                  <li class="project_tag">css</li>
-                  <li class="project_tag">javaScript</li>
-                </ul>
-              </div>
-              <button type="button" class="view_project_btn proj_2">
-                See Project
-              </button>
-            </div>
-          </li>
-          <li class="project">
-            <img src="images/project3.png" alt="Project Image 3" />
-            <div class="project_description">
-              <h2 class="project_title">Tonic</h2>
-              <div class="project_info">
-                <p class="project_title_II">CANOPY</p>
-                <ul class="project_job_title_info_container">
-                  <li class="job_title_info">Back End Dev</li>
-                  <li class="job_title_info">2015</li>
-                </ul>
-              </div>
-              <p class="project_full_desc">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <div class="project_tags_container">
-                <ul class="tags_flex">
-                  <li class="project_tag">html</li>
-                  <li class="project_tag">css</li>
-                  <li class="project_tag">javaScript</li>
-                </ul>
-              </div>
-              <button type="button" class="view_project_btn proj_3">
-                See Project
-              </button>
-            </div>
-          </li>
-          <li class="project reverse_row">
-            <img src="images/project4.png" alt="Project Image 4" />
-            <div class="project_description">
-              <h2 class="project_title">Multi-Post Stories</h2>
-              <div class="project_info">
-                <p class="project_title_II">CANOPY</p>
-                <ul class="project_job_title_info_container">
-                  <li class="job_title_info">Back End Dev</li>
-                  <li class="job_title_info">2015</li>
-                </ul>
-              </div>
-              <p class="project_full_desc">
-                A daily selection of privately personalized reads; no accounts
-                or sign-ups required.
-              </p>
-              <div class="project_tags_container">
-                <ul class="tags_flex">
-                  <li class="project_tag">html</li>
-                  <li class="project_tag">css</li>
-                  <li class="project_tag">javaScript</li>
-                </ul>
-              </div>
-              <button type="button" class="view_project_btn proj_4">
-                See Project
-              </button>
-            </div>
-          </li>
+          <!--Dynamic Project Contents-->
         </ul>
       </section>
 
@@ -359,11 +252,12 @@
         </div>
       </section>
     </main>
+    
     <div class="modal vanish">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2 class="project_title open_view_proj_title">
-          <!--Dynamic DOM content Name-->Project Name
+          <!--Dynamic DOM content Name-->.
         </h2>
         <div class="project_info open_view_proj_info">
           <p class="project_title_II">CANOPY</p>
@@ -389,14 +283,14 @@
                <ul class="btn_child_flex">
                 <li class="btn_li">
                   <form class= "btn_see_live" action="#">
-                    <button type="button" class="view_project_btn view_btn_1">
+                    <button type="submit" class="view_project_btn view_btn_1">
                       See live <img src="images/see_live_btn.png" alt="hamburger menu" class="btn_icon"/>
                     </button>
                   </form>>
                 </li>
                 <li class="btn_li">
                   <form class="btn_view_src" action="#">
-                    <button type="button" class="view_project_btn">
+                    <button type="submit" class="view_project_btn">
                       See Source <img src="images/see_source_btn.png" alt="hamburger menu" class="btn_icon"/>
                     </button>
                   </form>
