Fix modal role name, company name and year to dynamically fetch from current viewed project object

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
       </section>
     </main>
-    
+
     <div class="modal vanish">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -260,10 +260,10 @@
           <!--Dynamic DOM content Name-->.
         </h2>
         <div class="project_info open_view_proj_info">
-          <p class="project_title_II">CANOPY</p>
+          <p class="project_title_II modal_company">CANOPY</p>
           <ul class="project_job_title_info_container">
-            <li class="job_title_info">Back End Dev</li>
-            <li class="job_title_info">2015</li>
+            <li class="job_title_info modal_role">Back End Dev</li>
+            <li class="job_title_info modal_year">2015</li>
           </ul>
         </div>
         <div class="view_img_container">
