--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             feature that you need built or a project that needs coding. I’d love
             to help with it
           </p>
-          <form action="https://formspree.io/f/mzbyjjjd" method="post">
+          <form action="https://formspree.io/f/mzbyjjjd" class="contact_form" method="post">
             <ul>
               <li>
                 <label for="name">Name:</label>
@@ -228,6 +228,7 @@
               <li>
                 <label for="email">Email:</label>
                 <input
+                  class = "email_address"
                   type="email"
                   id="email"
                   name="email"
@@ -245,6 +246,7 @@
                 ></textarea>
               </li>
               <li class="form_li_submit">
+                <p class="validation_message"></p>
                 <input type="submit" class="submit_btn" value="Get In Touch" />
               </li>
             </ul>
