--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRXL389CXL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
 
       gtag('config', 'G-XRXL389CXL');
@@ -30,7 +29,7 @@
           <img src="images/MyLogo.png" alt="Logo" />
         </a>
         <nav class="toggle">
-          <img src="images/Union.png" alt="hamburger menu" class="hamburger_menu_icon"/>
+          <img src="images/Union.png" alt="hamburger menu" class="hamburger_menu_icon" />
           <ul class="mobile_side_nav">
             <li class="menu_link closebtn"><a href="javascript:void(0)">&times;</a></li>
             <li class="menu_link"><a href="#Portfolio" class="menulink">Portfolio</a></li>
@@ -53,15 +52,10 @@
         </nav>
       </div>
     </header>
-    <main  class="parent_main">
+    <main class="parent_main">
       <section class="main_container">
         <h1 class="box1">I'm Alexander Glad to see you!</h1>
-        <p class="box2">
-          I'm a software developer! I can help you build a product, feature or
-          website Look through some of my work and experience! If you like what
-          you see and have a project you need coded, don't hestiate to contact
-          me.
-        </p>
+        <p class="box2">I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
         <h2 class="box3">LET'S CONNECT</h2>
         <ul class="box4">
           <li class="socials">
@@ -70,9 +64,7 @@
             </a>
           </li>
           <li class="socials">
-            <a
-              href="https://www.linkedin.com/in/alexander-oguzie-ibeh-776814164"
-            >
+            <a href="https://www.linkedin.com/in/alexander-oguzie-ibeh-776814164">
               <img src="images/Linkedin.png" alt="Linkedin" />
             </a>
           </li>
@@ -95,20 +87,13 @@
       </section>
 
       <section id="Portfolio">
-        <ul class="project_contents">
-          <!--Dynamic Project Contents-->
-        </ul>
+        <ul class="project_contents"></ul>
       </section>
 
       <section class="about_container" id="About">
         <div class="about_myself">
           <h1 class="box1">About Myself</h1>
-          <p class="box2">
-            Hello I'm a software developer! I can help you build a product,
-            feature or website Look through some of my work and experience! If
-            you like what you see and have a project you need coded, don't
-            hestiate to contact me.
-          </p>
+          <p class="box2">Hello I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
           <h2 class="box3">LET'S CONNECT</h2>
           <ul class="box4">
             <li class="socials">
@@ -117,9 +102,7 @@
               </a>
             </li>
             <li class="socials">
-              <a
-                href="https://www.linkedin.com/in/alexander-oguzie-ibeh-776814164"
-              >
+              <a href="https://www.linkedin.com/in/alexander-oguzie-ibeh-776814164">
                 <img src="images/Linkedin.png" alt="Linkedin" />
               </a>
             </li>
@@ -166,9 +149,7 @@
             </li>
             <li>
               <section class="skills_dropdown">
-                <h3 class="skills_dropdown_title dropdown_child_class">
-                  Frameworks
-                </h3>
+                <h3 class="skills_dropdown_title dropdown_child_class">Frameworks</h3>
                 <img src="images/arrow.png" alt="arrow-icon" />
               </section>
               <ul class="skills_dropdown_desc closed">
@@ -188,9 +169,7 @@
             </li>
             <li>
               <section class="skills_dropdown">
-                <h3 class="skills_dropdown_title dropdown_child_class">
-                  Skills
-                </h3>
+                <h3 class="skills_dropdown_title dropdown_child_class">Skills</h3>
                 <img src="images/arrow.png" alt="arrow-icon" />
               </section>
               <ul class="skills_dropdown_desc closed">
@@ -207,43 +186,20 @@
       <section class="contact" id="Contact">
         <div class="contact__container">
           <h2 class="contact_header">Contact me</h2>
-          <p class="contact_description">
-            If you have an application you are interested in developing, a
-            feature that you need built or a project that needs coding. I’d love
-            to help with it
-          </p>
+          <p class="contact_description">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p>
           <form action="https://formspree.io/f/mzbyjjjd" class="contact_form" method="post">
             <ul>
               <li>
                 <label for="name">Name:</label>
-                <input
-                  type="text"
-                  id="name"
-                  name="name"
-                  placeholder="Enter your name here"
-                  maxlength="30"
-                  required
-                />
+                <input type="text" id="name" name="name" placeholder="Enter your name here" maxlength="30" required />
               </li>
               <li>
                 <label for="email">Email:</label>
-                <input
-                  class = "email_address"
-                  type="email"
-                  id="email"
-                  name="email"
-                  placeholder="Enter your email here"
-                  required
-                />
+                <input class="email_address" type="email" id="email" name="email" placeholder="Enter your email here" required />
               </li>
               <li>
                 <label for="message">Message:</label>
-                <textarea
-                  id="message"
-                  placeholder="Write your message here"
-                  maxlength="500"
-                  required
-                ></textarea>
+                <textarea id="message" placeholder="Write your message here" maxlength="500" required></textarea>
               </li>
               <li class="form_li_submit">
                 <p class="validation_message"></p>
@@ -258,9 +214,7 @@
     <div class="modal vanish">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <h2 class="project_title open_view_proj_title">
-          <!--Dynamic DOM content Name-->.
-        </h2>
+        <h2 class="project_title open_view_proj_title"></h2>
         <div class="project_info open_view_proj_info">
           <p class="project_title_II modal_company">CANOPY</p>
           <ul class="project_job_title_info_container">
@@ -272,36 +226,29 @@
           <img src="#" class="view_proj_img" alt="Project Image 1" />
         </div>
         <div class="proj_view_desc_opened project_description">
-          <p class="project_full_desc_opened project_full_desc">
-           <!--Dynamic DOM Content Description-->
-          </p>
+          <p class="project_full_desc_opened project_full_desc"></p>
           <div class="modal_view_desc">
             <div class="project_tags_container project_tags_container_opened">
-              <ul class="tags_flex open_view_tag">
-                <!--Dynamic DOM technology list-->
-              </ul>
+              <ul class="tags_flex open_view_tag"></ul>
             </div>
             <div class="btn_containers">
-               <ul class="btn_child_flex">
+              <ul class="btn_child_flex">
                 <li class="btn_li">
-                  <form class= "btn_see_live" action="#">
-                    <button type="submit" class="view_project_btn view_btn_1">
-                      See live <img src="images/see_live_btn.png" alt="hamburger menu" class="btn_icon"/>
-                    </button>
-                  </form>>
+                  <form class="btn_see_live" action="#">
+                    <button type="submit" class="view_project_btn view_btn_1">See live <img src="images/see_live_btn.png" alt="hamburger menu" class="btn_icon" /></button>
+                  </form>
+                  >
                 </li>
                 <li class="btn_li">
                   <form class="btn_view_src" action="#">
-                    <button type="submit" class="view_project_btn">
-                      See Source <img src="images/see_source_btn.png" alt="hamburger menu" class="btn_icon"/>
-                    </button>
+                    <button type="submit" class="view_project_btn">See Source <img src="images/see_source_btn.png" alt="hamburger menu" class="btn_icon" /></button>
                   </form>
                 </li>
-               </ul>
+              </ul>
             </div>
           </div>
         </div>
-      </div>    
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
