Connect local storage javascript object to html form input identifiers

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <ul>
               <li>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name here" maxlength="30" required />
+                <input class = "contact_name" type="text" id="name" name="name" placeholder="Enter your name here" maxlength="30" required />
               </li>
               <li>
                 <label for="email">Email:</label>
@@ -199,7 +199,7 @@
               </li>
               <li>
                 <label for="message">Message:</label>
-                <textarea id="message" placeholder="Write your message here" maxlength="500" required></textarea>
+                <textarea class="contact_message" id="message" placeholder="Write your message here" maxlength="500" required></textarea>
               </li>
               <li class="form_li_submit">
                 <p class="validation_message"></p>
